@@ -8,6 +8,8 @@ Date: 2023-01-16
     - (Setting: 0.025) Level 20 unit requires 1.5x pollution to generate.  Level 10 unit requires 1.25x pollution to generate.
     - (Setting: 0.01) Level 20 unit requires 1.2x pollution to generate.  Level 10 unit requires 1.1x pollution to generate.
     - (Setting: 0) No change to unit's pollution value.
+    - small damage reduction at lower level of corrupted robots.
+    - biter's featured group changes
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.16.6
